<?xml version="1.0"?>

<package format="2">
  <name>ifopt_ipopt</name>
  <version>1.0.0</version>
    <description>
    The interface to solve a problem defined with 
    <a href="http://wiki.ros.org/ifopt">Ifopt</a>
    using
    <a href="https://projects.coin-or.org/Ipopt">Ipopt</a>.
  </description>

  <author>Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">https://github.com/ethz-adrl/ifopt</url>
  <url type="bugtracker">https://github.com/ethz-adrl/ifopt/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ifopt_core</depend>

</package>
