<?xml version="1.0"?>

<package format="2">
  <name>ifopt_snopt</name>
  <version>1.0.0</version>
  <description>
    The interface to solve an problem defined with ifopt using 
    <a href="http://ampl.com/products/solvers/solvers-we-sell/snopt/">Snopt</a>.
  </description>

  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">https://github.com/ethz-adrl/ifopt</url>
  <url type="bugtracker">https://github.com/ethz-adrl/ifopt/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ifopt_core</depend>

</package>
